[gd_scene load_steps=3 format=3 uid="uid://cd4ge4utoly7a"]

[ext_resource type="Script" path="res://Game/Interface/Specials/cheat_panel.gd" id="1_qnu5x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1jyah"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="CheatPanel" type="Panel"]
z_index = 270
anchors_preset = -1
anchor_top = 0.253521
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1jyah")
script = ExtResource("1_qnu5x")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NbOfRebirthTitle" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nombre de rebirth:"

[node name="NbOfRebirthSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
alignment = 1

[node name="FinishButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "finish"

[node name="JailButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "JAIL"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EventLabe" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Choisir un event"

[node name="CheatEventSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
value = 1.0
alignment = 1

[node name="CheatEventButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "event"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/NbOfRebirthSpinBox" to="." method="_on_nb_of_rebirth_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FinishButton" to="." method="_on_finish_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/JailButton" to="." method="_on_jail_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CheatEventButton" to="." method="_on_cheat_event_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
